--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         }
     ],
     "require": {
-        "php": "^7.2 || 8.0.*",
-        "lusitanian/oauth": "dev-master"
+        "php": "^7.2",
+        "lusitanian/oauth": "*"
     },
     "require-dev": {
         "illuminate/support": "~5"
